# korthathon

./: .gitignore  HowToRun.md  README.md  VideoNotes.md  hardhat.config.js  package-lock.json  package.json  truffle-config.js
artifacts/@openzeppelin/contracts/token/ERC20/IERC20.sol/: IERC20.dbg.json
artifacts/contracts/ghomultisig.sol/: IGHO.dbg.json  IGHO.json  ghomultisig.dbg.json  ghomultisig.json
cache/: solidity-files-cache.json
contracts/: README.md  ghomultisig.sol
frontend/: package.json
frontend/src/: App.js  index.js
frontend/src/components/: AmountInput.js  ContractAddressInput.js  RecipientAddressInput.js  SignatoryAddressInput.js  SignatoryIndexInput.js  TransactionDropdown.js  TransactionIndexInput.js  WalletConnect.js  transactionForm.js
migrations/: 2_deploy_ghomultisig.js
scripts/: contract_cli.js  contract_functions.js  deploy.js  ghoMultiSigSDK.js  interact.js  main.js  multisigscript.js
src/: multisig.sol
src/rust-src/: Cargo.toml
src/rust-src/src/: main.rs
