[package]
name = "rust-src"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.4.17"
ethers = { version = "2.0.11", default-features = false, features = ["legacy"]}
eyre = "0.6.11"
full = "0.1.0"
hex = "0.4.3"
tokio = { version = "^1.35.1", features = ["full"] }
